# docs/swagger.json
@@ -21,7 +21,35 @@
     "host": "127.0.0.1:8080",
     "basePath": "/",
     "paths": {
-        "/creds": {
+        "/api/creds/all": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all credentials.",
+                "summary": "Get all credentials.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/utils.Response"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "int"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/creds/new": {
             "post": {
                 "security": [
                     {
@@ -48,7 +76,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/utils.Credential"
+                            "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "400": {
@@ -66,35 +94,7 @@
                 }
             }
         },
-        "/creds/all": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Get all credentials.",
-                "summary": "Get all credentials.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/utils.Credential"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "int"
-                        }
-                    }
-                }
-            }
-        },
-        "/creds/{cred_id}": {
+        "/api/creds/{cred_id}": {
             "get": {
                 "security": [
                     {
@@ -116,7 +116,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Credential"
+                            "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "404": {
@@ -140,12 +140,19 @@
                 "summary": "Update Credentials.",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "cred_id",
+                        "name": "cred_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "update request",
                         "name": "creds",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/utils.UpdateRequest"
+                            "$ref": "#/definitions/utils.CredentialSwag"
                         }
                     }
                 ],
@@ -153,7 +160,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Credential"
+                            "$ref": "#/definitions/utils.Response"
                         }
                     },
                     "404": {
@@ -203,7 +210,7 @@
                 }
             }
         },
-        "/login": {
+        "/api/login": {
             "post": {
                 "description": "Log in the app.",
                 "consumes": [
@@ -252,7 +259,7 @@
                 }
             }
         },
-        "/signup": {
+        "/api/signup": {
             "post": {
                 "description": "Log in the app.",
                 "consumes": [
@@ -274,7 +281,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.User"
+                            "$ref": "#/definitions/utils.UserResponse"
                         }
                     },
                     "409": {
@@ -294,50 +301,6 @@
         }
     },
     "definitions": {
-        "gorm.DeletedAt": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "utils.Credential": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "credName": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "domain": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
-                }
-            }
-        },
         "utils.CredentialSwag": {
             "type": "object",
             "properties": {
@@ -377,7 +340,7 @@
                 }
             }
         },
-        "utils.UpdateRequest": {
+        "utils.Response": {
             "type": "object",
             "properties": {
                 "credName": {
@@ -397,21 +360,9 @@
                 }
             }
         },
-        "utils.User": {
+        "utils.UserResponse": {
             "type": "object",
             "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "credential": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/utils.Credential"
-                    }
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -419,9 +370,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
