# handlers/create.go
@@ -1,12 +1,11 @@
 package handlers
 
 import (
-	"fiber/token"
-	"fiber/utils"
+	"gogin/token"
+	"gogin/models"
+	"gogin/config"
 	"net/http"
-
 	"github.com/gin-gonic/gin"
-
 	"github.com/jinzhu/copier"
 )
 
@@ -14,16 +13,16 @@ import (
 // @Summary Create credentials.
 // @Description Create credentials of user.
 // @Accept json
-// @Param cred body utils.CredentialSwag true "creds"
-// @Success 201 {object} utils.Credential
+// @Param cred body models.CredentialSwag true "creds"
+// @Success 201 {object} models.Response
 // @Failure 400 {int} uint
 // @Failure 422 {int} uint
 // @Security ApiKeyAuth
-// @Router /creds [post]
+// @Router /api/creds/new [post]
 func CreateCreds(c *gin.Context) {
-	var response utils.Response
-	db := utils.ConnectToDB()
-	body := utils.Credential{}
+	var response models.Response
+	db := config.ConnectToDB()
+	body := models.Credential{}
 	if err := c.ShouldBindJSON(&body); err != nil {
 		c.AbortWithError(http.StatusUnprocessableEntity, err)
 		return
@@ -35,7 +34,7 @@ func CreateCreds(c *gin.Context) {
 		return
 	}
 
-	creds:= utils.Credential{UserID: body.UserID ,CredName: body.CredName, Domain: body.Domain, Login: body.Login, Password: body.Password}
+	creds:= models.Credential{UserID: body.UserID ,CredName: body.CredName, Domain: body.Domain, Login: body.Login, Password: body.Password}
 	creds.UserID = uint(user_id)
 
 	result := db.Create(&creds)
@@ -47,23 +46,29 @@ func CreateCreds(c *gin.Context) {
 	c.JSON(http.StatusCreated, response)
 }
 
-// func CreateCreds(c *fiber.Ctx) error{
-// 	var response utils.Response
-// 	db := utils.ConnectToDB()
-// 	creds := new(utils.Credential)
-// 	if err := c.BodyParser(creds); err != nil {
-// 		return c.Status(422).SendString(err.Error())
-// 	}
+func CreateCredsTest(c *gin.Context) {
+	var response models.Response
+	db := config.ConnectToTestDB()
+	body := models.Credential{}
+	if err := c.ShouldBindJSON(&body); err != nil {
+		c.AbortWithError(http.StatusUnprocessableEntity, err)
+		return
+	}
 
-// 	user := c.Locals("user").(*jtoken.Token)
-// 	claims := user.Claims.(jtoken.MapClaims)
-// 	user_id := claims["ID"].(float64)
+	user_id, err := token.ExtractTokenID(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest ,"Unable to extract id from token")
+		return
+	}
 
-// 	creds.UserID = uint(user_id)
-// 	result := db.Create(&creds)
-// 	if result.RowsAffected == 0 {
-// 		return c.SendStatus(400)
-// 	}
-// 	copier.Copy(&response, &creds)
-// 	return c.Status(201).JSON(response)
-// }
+	creds:= models.Credential{UserID: body.UserID ,CredName: body.CredName, Domain: body.Domain, Login: body.Login, Password: body.Password}
+	creds.UserID = uint(user_id)
+
+	result := db.Create(&creds)
+	if result.RowsAffected == 0 {
+		c.AbortWithStatus(http.StatusBadRequest)
+		return 
+	}
+	copier.Copy(&response, &creds)
+	c.JSON(http.StatusCreated, response)
+}
