# handlers/get_one.go
@@ -1,12 +1,11 @@
 package handlers
 
 import (
-	"fiber/token"
-	"fiber/utils"
+	"gogin/token"
+	"gogin/config"
+	"gogin/models"
 	"net/http"
-
 	"github.com/gin-gonic/gin"
-
 	"github.com/jinzhu/copier"
 )
 
@@ -14,13 +13,13 @@ import (
 // @Summary Get credentials by id.
 // @Description Get credentials by id.
 // @Param cred_id path uint true "cred_id"
-// @Success 200 {object} utils.Credential
+// @Success 200 {object} models.Response
 // @Failure 404 {int} uint
 // @Security ApiKeyAuth
-// @Router /creds/{cred_id} [get]
+// @Router /api/creds/{cred_id} [get]
 func GetOne(c *gin.Context) {
-	var cred utils.Credential
-	db := utils.ConnectToDB()
+	var cred models.Credential
+	db := config.ConnectToDB()
 	
 	user_id, err := token.ExtractTokenID(c)
 	if err != nil {
@@ -34,27 +33,30 @@ func GetOne(c *gin.Context) {
 		c.JSON(http.StatusNotFound, "No credentials were found")
 		return
 	}
-	var response utils.Response
+	var response models.Response
 	copier.Copy(&response, &cred)
 	
 	c.JSON(http.StatusOK, response)
 }
 
-// func GetOne(c *fiber.Ctx) error{
-// 	var cred utils.Credential
-// 	db := utils.ConnectToDB()
-// 	user := c.Locals("user").(*jtoken.Token)
-// 	claims := user.Claims.(jtoken.MapClaims)
-// 	user_id := claims["ID"].(float64)
-
-// 	cred_id := c.Params("cred_id")
-
-// 	result := db.Where("user_id = ? AND id = ?", user_id , cred_id).Find(&cred)
-// 	if result.RowsAffected == 0 {
-// 		return c.SendStatus(404)
-// 	}
-// 	var response utils.Response
-// 	copier.Copy(&response, &cred)
+func GetOneTest(c *gin.Context) {
+	var cred models.Credential
+	db := config.ConnectToTestDB()
 	
-// 	return c.Status(200).JSON(response)
-// }
+	user_id, err := token.ExtractTokenID(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest ,"Unable to extract id from token")
+		return
+	}
+	cred_id := c.Param("cred_id")
+
+	result := db.Where("user_id = ? AND id = ?", user_id , cred_id).Find(&cred)
+	if result.RowsAffected == 0 {
+		c.JSON(http.StatusNotFound, "No credentials were found")
+		return
+	}
+	var response models.Response
+	copier.Copy(&response, &cred)
+	
+	c.JSON(http.StatusOK, response)
+}
