# handlers/update.go
@@ -1,10 +1,10 @@
 package handlers
 
 import (
-	"fiber/token"
-	"fiber/utils"
+	"gogin/token"
+	"gogin/config"
+	"gogin/models"
 	"net/http"
-
 	"github.com/gin-gonic/gin"
 	"github.com/jinzhu/copier"
 )
@@ -12,15 +12,16 @@ import (
 // UpdateCreds godoc
 // @Summary Update Credentials.
 // @Description Update Credentials of your user.
-// @Param creds body utils.UpdateRequest true "update request"
+// @Param cred_id path uint true "cred_id"
+// @Param creds body models.CredentialSwag true "update request"
 // @Accept json
-// @Success 200 {object} utils.Credential
+// @Success 200 {object} models.ResponseUpdate
 // @Failure 404 {int} uint
 // @Failure 422 {int} uint
 // @Security ApiKeyAuth
-// @Router /creds/{cred_id} [put]
+// @Router /api/creds/{cred_id} [put]
 func UpdateCreds(c *gin.Context) {
-	db := utils.ConnectToDB()
+	db := config.ConnectToDB()
 
 	user_id, err := token.ExtractTokenID(c)
 	if err != nil {
@@ -30,21 +31,50 @@ func UpdateCreds(c *gin.Context) {
 
 	cred_id := c.Param("cred_id")
 
-	body := utils.Credential{}
+	body := models.Credential{}
 	if err := c.ShouldBindJSON(&body); err != nil{
 		c.AbortWithError(http.StatusUnprocessableEntity, err)
 		return
 	}
 
-	creds:= utils.Credential{CredName: body.CredName, Domain: body.Domain, Login: body.Login, Password: body.Password}
+	creds:= models.Credential{CredName: body.CredName, Domain: body.Domain, Login: body.Login, Password: body.Password}
 	creds.UserID = uint(user_id)
 
-	result := db.Where("user_id = ? AND id = ?", user_id , cred_id).Updates(&creds)
+	result := db.Where("id = ? AND user_id = ?", cred_id , user_id).Updates(&creds)
 	if result.RowsAffected == 0 {
 		c.JSON(http.StatusNotFound, "No credentials were found")
 	}
 
-	var response utils.Response
+	var response models.ResponseUpdate
 	copier.Copy(&response, &creds)
-	c.JSON(http.StatusOK ,response)
+	c.JSON(http.StatusOK , response)
+}
+
+func UpdateCredsTest(c *gin.Context) {
+	db := config.ConnectToTestDB()
+
+	user_id, err := token.ExtractTokenID(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest ,"Unable to extract id from token")
+		return
+	}
+
+	cred_id := c.Param("cred_id")
+
+	body := models.Credential{}
+	if err := c.ShouldBindJSON(&body); err != nil{
+		c.AbortWithError(http.StatusUnprocessableEntity, err)
+		return
+	}
+	creds:= models.Credential{CredName: body.CredName, Domain: body.Domain, Login: body.Login, Password: body.Password}
+	creds.UserID = uint(user_id)
+
+	result := db.Where("id = ? AND user_id = ?", cred_id , user_id).Updates(&creds)
+	if result.RowsAffected == 0 {
+		c.JSON(http.StatusNotFound, "No credentials were found")
+	}
+
+	var response models.Response
+	copier.Copy(&response, &creds)
+	c.JSON(http.StatusOK ,creds)
 }
